responsive design dashboard update

--- a/src/Components/pages/WelcomePage/custom-block.module.css
+++ b/src/Components/pages/WelcomePage/custom-block.module.css
@@ -6,20 +6,20 @@
     border-radius: var(--border-radius-component);
     position: relative;
     overflow: hidden;
-    flex: auto;
     padding: 1em;
 }
 
-.customBlock .profileImage {
+.profileImage {
     border-radius: var(--border-radius-medium);
     width: 55px;
     height: 55px;
     margin-right: 10px;
 }
+
 .customBlockProfileImage {
     border-radius: var(--border-radius-large);
     display: block;
-    margin: auto;
+    /* margin: auto; */
     width: 95.71px;
     height: 95.71px;
     object-fit: cover;
@@ -29,16 +29,16 @@
     background: var(--white-color);
     border-radius: var(--border-radius-medium);
     display: flex;
-    width: 55px;
-    height: 55px;
+    width: 40px;
+    height: 40px;
 }
 .sendMonkeyContainer {
     
     display: flex;
 }
 .profileRoundedIcon {
-    width: 55px;
-    height: 55px;
+    width: 40px;
+    height: 40px;
     color: var(--primary-bg-color);
 }
 .profileRoundedIcon:hover {
@@ -49,7 +49,7 @@
     max-width: 100px;
     margin: auto;
     position: relative;
-    margin-bottom: 2em;
+    margin-bottom: min(0.5em);
 }
 .customBlock h2,
 .customBlock p {
@@ -235,8 +235,10 @@
 
 .exchangeImage {
     border-radius: var(--border-radius-small);
-    width: 64px;
+    width: 40px;
     height: auto;
+    aspect-ratio: 2/1;
+    object-fit: cover;
     margin-right: 15px;
 }
 
