--- a/src/Components/pages/WelcomePage/welcome-page-layout.module.css
+++ b/src/Components/pages/WelcomePage/welcome-page-layout.module.css
@@ -1,5 +1,5 @@
 .bentoMainColumn {
-    flex: 4 0 300px;
+    flex: 0 0 min(250px);
     flex-direction: column;
     display: inline-flex;
     flex-wrap: wrap;
@@ -7,7 +7,7 @@
 }
 
 .bentoGridPlans {
-    flex: 2 0 200px;
+    flex: 1 0 200px;
     display: inline-flex;
     flex-wrap: wrap;
     gap: 0.5em;
@@ -18,7 +18,7 @@
 }
 
 .bentoFillColumn {
-    flex: 2 0 200px;
+    flex: 1 0 min(200px);
     flex-direction: column;
     display: inline-flex;
     flex-wrap: wrap;
@@ -26,7 +26,7 @@
 }
 
 .bentoSideColumn {
-    flex: 1 0 200px;
+    flex: 0 0 max(250px);
     flex-direction: column;
     display: inline-flex;
     flex-wrap: wrap;
@@ -35,14 +35,15 @@
 
 .contentContainer {
     display: flex;
+    flex-direction: column;
     width: 100dvw;
     margin: 1em;
     gap: 0.5em;
     height: calc(100dvh - 80px);
 }
 
-.contentContainer > div {
-    display: flex;
-    gap: 0.5em;
-    flex: auto;
+@media (min-width: 800px) {
+    .contentContainer {
+        flex-direction: row;
+    }
 }
