--- a/src/Components/pages/WelcomePage/Sidebar/sidebar.module.css
+++ b/src/Components/pages/WelcomePage/Sidebar/sidebar.module.css
@@ -27,6 +27,7 @@
   NAVIGATION              
 -----------------------------------------*/
 .sidebarMenu {
+    display: none;
     padding-top: 20px;
     min-width: 150px;
     flex: 0 0 max(15dvw);
@@ -76,6 +77,11 @@
     height: auto;
 }
 
+@media (min-width: 900px) {
+    .sidebarMenu {
+        display: block;
+    }
+}
 
 /*---------------------------------------
   PROFILE FORM, SEARCH
