--- a/src/css/base/topography.css
+++ b/src/css/base/topography.css
@@ -45,7 +45,7 @@
 -----------------------------------------*/
 
 html {
-    font: 12px/1.5 var(--body-font-family);
+    font: 16px/1.5 var(--body-font-family);
 }
 
 
@@ -75,7 +75,7 @@ h4 {
 } /* 14 * 1.6 = 22px */
 h5 {
     font-size: 1.2em;
-    padding-bottom: 1em;
+    /* padding-bottom: 1em; */
 } /* 14 * 1.2 = 17px */
 h6 {
     font-size: 1em;
