--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,10 +1,14 @@
-@media screen and (min-width: 800px) and (max-width: 1100px) {
+@media screen and (min-width: 800px) and (max-width: 1000px) {
     html {
-        font-size: 16px;
+        font-size: 12px;
+    }
+
+    h5 {
+        font-size: 1.3em;
     }
 }
 
-@media (min-width: 1100px) {
+@media (min-width: 1000px) and (max-width: 1600px) {
     html {
         font-size: 16px;
     }
