--- a/src/Components/pages/Footer/site-footer.module.css
+++ b/src/Components/pages/Footer/site-footer.module.css
@@ -11,7 +11,7 @@
     text-align: center;
     text-wrap: balance;
     color: var(--logo--text-color);
-    font-weight: 500;
+    font-size: var(--copyright-font-size);
     padding-bottom: 0;
 }
 
