--- a/src/Components/pages/HomePage/about.module.css
+++ b/src/Components/pages/HomePage/about.module.css
@@ -1,10 +1,16 @@
 .features {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    gap: 2em;
     flex-wrap: wrap;
 }
 
 .feature {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     flex: 1;
     margin: 20px;
     text-align: center;
@@ -14,4 +20,21 @@
     width: 100px;
     height: 100px;
     margin-bottom: 20px;
+}
+
+#about {
+    background: linear-gradient(to right, #b3cde0, #9ad2ee);
+}
+
+.container {
+    margin: 5em;
+}
+
+.aboutContent {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2em;
 }
