fixed css errors added author & licence info in package json

--- a/src/Components/pages/Header/site-header.module.css
+++ b/src/Components/pages/Header/site-header.module.css
@@ -196,7 +196,7 @@
 
 .dropdownMenuProfileThumb {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     gap: 1em;
     align-items: center;
     padding-left: 1em;
