--- a/src/Components/pages/HomePage/home.module.css
+++ b/src/Components/pages/HomePage/home.module.css
@@ -107,7 +107,7 @@
         margin: 0em;
         width: 100%;
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
     }
 }
 
