--- a/src/Components/pages/WelcomePage/custom-block.module.css
+++ b/src/Components/pages/WelcomePage/custom-block.module.css
@@ -13,7 +13,6 @@
     border-radius: var(--border-radius-medium);
     width: 50px;
     height: 50px;
-    margin-right: 10px;
 }
 
 .customBlockProfileImage {
@@ -33,8 +32,10 @@
     height: 40px;
 }
 .sendMonkeyContainer {
-    
     display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    gap: 0.4em;
 }
 .profileRoundedIcon {
     width: 50px;
