--- a/src/Components/pages/WelcomePage/welcome-page-layout.module.css
+++ b/src/Components/pages/WelcomePage/welcome-page-layout.module.css
@@ -26,7 +26,7 @@
 }
 
 .bentoSideColumn {
-    flex: 0 0 max(250px);
+    flex: 0 0 max(200px);
     flex-direction: column;
     display: inline-flex;
     flex-wrap: wrap;
@@ -45,5 +45,13 @@
 @media (min-width: 800px) {
     .contentContainer {
         flex-direction: row;
+    }
+}
+@media (min-width: 1100px) {
+    .contentContainer {
+        flex-direction: row;
+    }
+    .bentoSideColumn {
+        flex: 0 0 max(200px);
     }
 }
