--- a/src/css/site-layout.css
+++ b/src/css/site-layout.css
@@ -1,5 +1,3 @@
-
-
 main {
     flex: 1;
     display: flex;
@@ -13,9 +11,7 @@ main {
     width: 100dvw;
 }
 
-
-
-#root {
+.ant-app {
     background-color: var(--white-color);
     font-family: var(--body-font-family);
     font-style: var(--body-font-style);
