added display friends section under profile tab with action buttons, updated notifications, updated adding friends

--- a/src/Components/pages/WelcomePage/welcome-page-layout.module.css
+++ b/src/Components/pages/WelcomePage/welcome-page-layout.module.css
@@ -41,6 +41,13 @@
     gap: 0.5em;
     height: calc(100dvh - 80px);
 }
+.contentContainerProfileTab {
+    display: flex;
+    width: 100dvw;
+    margin: 1em;
+    gap: 0.5em;
+    height: calc(100dvh - 80px);
+}
 
 @media (min-width: 800px) {
     .contentContainer {
