--- a/src/Components/pages/Header/assets/notifications.module.css
+++ b/src/Components/pages/Header/assets/notifications.module.css
@@ -24,7 +24,7 @@
 
 .singleNotification {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     border-radius: 0.5em;
     padding: 0.5em;
