--- a/src/Components/pages/WelcomePage/assets/Friends/friends.module.css
+++ b/src/Components/pages/WelcomePage/assets/Friends/friends.module.css
@@ -6,6 +6,15 @@
     margin: 0;
 }
 
+.entryWrapper{
+    align-items: center;
+    background-color: #ddd;
+    border: 1px solid transparent;
+    border-radius: 1em;
+    box-shadow: 0 0.4em 1em rgba(0, 0, 0, 0.6);
+    padding: 1em;
+}
+
 .profileImage {
     border-radius: 50%;
     width: 100px;
@@ -13,6 +22,8 @@
     object-fit: cover;
     margin-right: 20px;
 }
+
+
 
 .friendInfo {
     flex: 1;
