--- a/src/Components/pages/WelcomePage/Upgrade/upgrade.module.css
+++ b/src/Components/pages/WelcomePage/Upgrade/upgrade.module.css
@@ -21,12 +21,14 @@
     border-radius: 1em;
     background-color: var(--white-color);
     box-shadow: 0 0.3em 1em rgba(0, 0, 0, 0.1);
-    transition: box-shadow 0.3s ease;
-    width: 300px; /* Set a fixed width for the plan */
+    width: 300px; 
     height: 400px;
+    cursor: pointer;
+    transition: transform 0.1s ease; /* Add a smooth transition effect */
 }
+
 .plan:hover {
-    box-shadow: 0 0.3em 12px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05); /* Enlarge the element slightly on hover */
 }
 h1 {
     margin-bottom: 2em;
@@ -48,6 +50,73 @@ button:hover {
 }
 
 ul {
-    list-style: none;
+    list-style:circle;
+    text-align: left;
+    margin: 2em 1em;
     padding: 0;
+}
+
+.bentoMainColumn {
+    flex: 1 0 min(200px);
+    flex-direction: column;
+    display: inline-flex;
+    flex-wrap: wrap;
+    gap: 0.5em;
+}
+
+.bentoGridPlans {
+    flex: 1 0 200px;
+    display: inline-flex;
+    flex-wrap: wrap;
+    gap: 0.5em;
+}
+
+.bentoCell {
+    flex: 1 0 200px;
+}
+
+.bentoFillColumn {
+    flex: 4 0 min(200px);
+    flex-direction: column;
+    display: inline-flex;
+    flex-wrap: wrap;
+    gap: 0.5em;
+}
+
+.bentoSideColumn {
+    flex: 0 0 max(200px);
+    flex-direction: column;
+    display: inline-flex;
+    flex-wrap: wrap;
+    gap: 0.5em;
+}
+
+.contentContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    margin: 1em;
+    gap: 0.5em;
+    height: calc(100vh - 80px);
+}
+.contentContainerProfileTab {
+    display: flex;
+    width: 100vw;
+    margin: 1em;
+    gap: 0.5em;
+    height: calc(100vh - 80px);
+}
+
+@media (min-width: 800px) {
+    .contentContainer {
+        flex-direction: row;
+    }
+}
+@media (min-width: 1100px) {
+    .contentContainer {
+        flex-direction: row;
+    }
+    .bentoSideColumn {
+        flex: 0 0 max(200px);
+    }
 }
