--- a/src/Components/pages/WelcomePage/custom-block.module.css
+++ b/src/Components/pages/WelcomePage/custom-block.module.css
@@ -118,6 +118,7 @@
 
 .customBlockBottom {
     background: var(--third-bg-color);
+    position: relative;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -129,22 +130,42 @@
 }
 
 .customBlockIcon {
+    position: relative;
     background: var(--custom-btn-bg-color);
-    border-radius: 1em;
+    color: white;
     width: 30px;
     height: 30px;
-    padding: 0.8em;
-    color: var(--white-color);
-    transition: all 0.3s ease-in;
+    border: none;
+    border-radius: 1em;
+    padding: 8px 12px;
+    cursor: pointer;
+    overflow: visible; 
 }
-/* .bi-wallet:hover, .bi-upc-scan:hover, .bi-send:hover, .bi-arrow-down:hover {
-  background: white;  
-  color: var(--black-color);
-} */
+
+.customBlockIcon::before {
+    content: attr(data-text);
+    position: absolute;
+    top: -50px; 
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 8px;
+    border-radius: 5px;
+    transition: opacity 0.3s, top 0.3s;
+    z-index: 5;
+    pointer-events: none;
+}
 
 .customBlockIcon:hover {
     background: var(--custom-btn-bg-hover-color);
-    color: white;
+    color: #0056b3;
+}
+
+.customBlockIcon:hover::before {
+    opacity: 1;
+    top: -50px;
 }
 
 .customBlock p {
