--- a/src/Components/pages/Header/assets/notifications.module.css
+++ b/src/Components/pages/Header/assets/notifications.module.css
@@ -28,7 +28,7 @@
     align-items: center;
     border-radius: 0.5em;
     padding: 0.5em;
-    border: 1px solid rgba(168, 168, 168, 0.857);
+    border: 1px solid #ddd;
     transition: 0.2s;
 }
 
@@ -43,8 +43,8 @@
 
 .btnRemove {
     display: none;
-    border: 1px solid rgba(168, 168, 168, 0.857);
-    border-radius: 8px;
+    border: 1px solid #ddd;
+    border-radius: 0.5em;
     padding: 0.3em;
     cursor: pointer;
     background-color: transparent;
@@ -52,8 +52,8 @@
 }
 
 .btnRemove:hover {
-    color: var(--primary-hover-color);
-    background-color: white;
+    color:  white;
+    background-color:var(--primary-hover-color);
     border-color: var(--primary-hover-color);
 }
 
@@ -103,7 +103,7 @@
 }
 
 .accept {
-    border: 1px solid rgba(168, 168, 168, 0.857);
+    border: 1px solid #ddd;
     border-radius: 8px;
     padding: 0.1em;
     width: 1.3em;
@@ -117,7 +117,7 @@
 }
 
 .reject {
-    border: 1px solid rgba(168, 168, 168, 0.857);
+    border: 1px solid #ddd;
     border-radius: 8px;
     padding: 0.1em;
     width: 1.3em;
