--- a/src/css/base/topography.css
+++ b/src/css/base/topography.css
@@ -11,8 +11,8 @@
     --section-bg-color: #eee;
     --primary-bg-color: #a60067;
     --third-bg-color: #ccdde2ff;
-    --custom-btn-bg-color: #dc602e;
-    --custom-btn-bg-hover-color: #ee8359;
+    --custom-btn-bg-color: #1678fb;
+    --custom-btn-bg-hover-color:#ccdde2ff;
     --heading-color: #44464c;
     --p-color: #1d3557ff;
     --border-color: #ccdde2ff;
