--- a/src/css/elements/buttons.css
+++ b/src/css/elements/buttons.css
@@ -54,9 +54,9 @@
 
 .custom-btn {
     background: var(--custom-btn-bg-color);
-    border: 1px solid transparent;
+    border: 1px solid var(--primary-hover-color);
     border-radius: var(--border-radius-small);
-    color: var(--white-color);
+    color: var(--primary-hover-color);
     font-size: 1em;
     font-weight: var(--font-weight-bold);
     line-height: normal;
@@ -66,7 +66,27 @@
 }
 
 .custom-btn:hover {
-    background: var(--custom-btn-bg-hover-color);
+    background: var(--primary-hover-color);
+    color: var(--white-color);
+    border-color: var(--primary-hover-color);
+}
+
+.custom-btn-fill {
+    background: var(--primary-hover-color);
+    color: var(--white-color);
+
+    border: 1px solid var(--primary-hover-color);
+    border-radius: var(--border-radius-small);
+    font-size: 1em;
+    font-weight: var(--font-weight-bold);
+    line-height: normal;
+    transition: all 0.1s;
+    padding: 6px 20px;
+    height: 2.2em;
+}
+
+.custom-btn-fill:hover {
+    background: var(--section-bg-color);
     color: var(--primary-hover-color);
     border-color: var(--primary-hover-color);
 }
